--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"
         tools:ignore="CoarseFineLocation" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -17,6 +18,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyCurrentLocation"
         tools:targetApi="31">
+        <service
+            android:name=".LocationService"
+            android:enabled="true"
+            android:exported="true" />
 
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
@@ -36,16 +41,16 @@
         <activity
             android:name=".MapsActivity"
             android:exported="true"
-            android:label="@string/title_activity_maps">
-        </activity>
-        <acivity
+            android:label="@string/title_activity_maps" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            tools:ignore="IntentFilterExportedReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </acivity>
+        </activity>
 
     </application>
 
