--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -13,7 +14,7 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -49,4 +50,36 @@ dependencies {
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    def lifecycle_version = '2.4.0'
+    //noinspection GradleDependency
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    //noinspection GradleDependency
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation 'androidx.room:room-common:2.4.3'
+    implementation 'androidx.room:room-ktx:2.4.3'
+    def roomVersion = '2.4.3'
+    //noinspection GradleDependency,GradleDependency,NotInterpolated
+    implementation 'androidx.room:room-runtime:$roomVersion'
+    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    //noinspection GradleDependency
+    implementation "androidx.room:room-rxjava3:$roomVersion"
+    //noinspection GradleDependency
+    implementation "androidx.room:room-ktx:$roomVersion"
+    implementation "com.google.android.play:review-ktx:2.0.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.9.1'
+    def work_version = "2.7.1"
+    implementation 'com.airbnb.android:lottie:5.2.0'
+    // Kotlin + coroutines
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+    // optional - RxJava2 support
+    implementation "androidx.work:work-rxjava2:$work_version"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    //noinspection GradleDependency
+    implementation "androidx.room:room-rxjava3:$roomVersion"
+    //noinspection GradleDependency
+    implementation "androidx.room:room-ktx:$roomVersion"
 }
